Fix: Reduce collection section spacing on mobile and improve image gallery

--- a/css/hero.css
+++ b/css/hero.css
@@ -16,7 +16,6 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('../assets/hero_bg.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
